<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_fundo"
    tools:context=".CadastroActivity">

    <!-- Título -->
    <TextView
        android:id="@+id/titulocadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastre_se"
        style="@style/TitleTextStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:textStyle="bold" />

    <!-- Campos de Cadastro -->
    <EditText
        android:id="@+id/nome_sobrenome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/nome_sobrenome_hint"
        android:inputType="textPersonName"
        android:importantForAutofill="yes"
        android:autofillHints="name"
        android:padding="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:cursorVisible="true"
        app:layout_constraintTop_toBottomOf="@id/titulocadastro"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:importantForAutofill="yes"
        android:autofillHints="emailAddress"
        app:layout_constraintTop_toBottomOf="@id/nome_sobrenome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:cursorVisible="true" />

    <EditText
        android:id="@+id/data_nascimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/data_nascimento_hint"
        android:inputType="number"
        android:importantForAutofill="yes"
        android:autofillHints="birthday"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:cursorVisible="true" />

    <EditText
        android:id="@+id/endereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/endereco_hint"
        android:inputType="textPostalAddress"
        android:importantForAutofill="yes"
        android:autofillHints="postalAddress"
        app:layout_constraintTop_toBottomOf="@id/data_nascimento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:cursorVisible="true" />

    <EditText
        android:id="@+id/senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/senha_hint"
        android:inputType="textPassword"
        android:importantForAutofill="yes"
        android:autofillHints="password"
        app:layout_constraintTop_toBottomOf="@id/endereco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:cursorVisible="true" />

    <EditText
        android:id="@+id/confirmar_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/confirmar_senha_hint"
        android:inputType="textPassword"
        android:importantForAutofill="yes"
        android:autofillHints="password"
        app:layout_constraintTop_toBottomOf="@id/senha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:cursorVisible="true" />

    <Button
        android:id="@+id/criar_conta_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/criar_conta_button"
        android:textColor="#070707"
        android:background="@drawable/button_background"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/confirmar_senha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/ButtonStyle" />
</androidx.constraintlayout.widget.ConstraintLayout>
