<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_fundo"
    tools:context=".MainActivity">

    <!-- Título do App -->
    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:textStyle="bold" />

    <!-- Subtítulo do App -->
    <TextView
        android:id="@+id/subtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_subtitle"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:textStyle="bold" />

    <!-- Imagem Tela Login -->
    <ImageView
        android:id="@+id/imagem_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/ic_telalogin"
        android:contentDescription="@string/ic_tela_login"
        android:scaleType="centerInside"
        app:layout_constraintTop_toBottomOf="@id/subtitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
    android:layout_marginTop="16dp" />

    <!-- Campo de Usuário -->
    <EditText
        android:id="@+id/usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario_hint"
        android:textColor="#474343"
        android:inputType="textEmailAddress"
        android:importantForAutofill="yes"
        android:autofillHints="username"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:minHeight="48dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/imagem_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:cursorVisible="true" />

    <!-- Campo de Senha -->
    <EditText
        android:id="@+id/senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha_hint"
        android:textColor="#474343"
        android:inputType="textPassword"
        android:importantForAutofill="yes"
        android:autofillHints="password"
        android:padding="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:minHeight="48dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:cursorVisible="true" />

    <!-- CheckBox Lembrar-me -->
    <Switch
        android:id="@+id/switchLembrarMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lembrar_me"
        android:textColor="#474343"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/senha"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:buttonTint="@android:color/black" />

    <!-- Botão Entrar -->
    <Button
        android:id="@+id/entrar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_button"
        android:textColor="#474343"
        android:background="@drawable/button_background"
        android:padding="16dp"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/switchLembrarMe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cadastro_texto"
        android:textStyle="bold" />

    <!-- Texto de Cadastro -->
    <TextView
        android:id="@+id/cadastro_texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_link"
        android:textColor="#474343"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/entrar_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
