<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_fundo" >

    <!-- Título da Tela -->
    <TextView
        android:id="@+id/tvTituloTrocarSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trocar_senha_titulo"
        android:textSize="22sp"
        android:textColor="#474343"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_centerHorizontal="true"/>

    <!-- Campo Senha Atual -->
    <EditText
        android:id="@+id/senha_atual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/senha_atual_hint"
        android:textColor="#474343"
        android:inputType="textPassword"
        android:importantForAccessibility="yes"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:imeOptions="actionNext"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="password"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvTituloTrocarSenha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Campo Nova Senha -->
    <EditText
        android:id="@+id/nova_senha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nova_senha_hint"
        android:textColor="#474343"
        android:inputType="textPassword"
        android:importantForAccessibility="yes"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:imeOptions="actionNext"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="newPassword"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/senha_atual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Campo Confirmar Nova Senha -->
    <EditText
        android:id="@+id/confirmar_senha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirmar_senha_hint"
        android:textColor="#474343"
        android:inputType="textPassword"
        android:importantForAccessibility="yes"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:imeOptions="actionDone"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_marginBottom="24dp"
        android:autofillHints="newPasswordConfirm"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/nova_senha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Botão Confirmar Troca de Senha -->
    <Button
        android:id="@+id/btnConfirmarTrocaSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trocar_senha_button"
        android:textColor="#474343"
        android:background="@drawable/button_background"
        android:padding="16dp"
        android:textSize="16sp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/confirmar_senha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
