<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- LinearLayout com restrições para o ConstraintLayout -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <!-- Título do Pop-up -->
        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insira_email_titulo"
            android:textSize="18sp"
            android:textColor="#474343"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="20dp" />

        <!-- Campo para inserir o e-mail -->
        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_email_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="16sp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:cursorVisible="true"
            android:layout_marginBottom="20dp" />

        <!-- Botão para buscar os dados -->
        <Button
            android:id="@+id/btnBuscarDados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buscar_dados_botao"
            android:textColor="#474343"
            android:gravity="center"
            android:textSize="16sp"
            android:padding="10dp"
            android:background="@drawable/button_background"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
